@@ -167,14 +167,12 @@ option has actually no effect of FILES backend service.
 .TP
 .BI RunOnReceive
 
-Executes a program after receiving message. The program will receive
-identifiers of received messages depending on used service backend (typically
-ID of inserted row for database backends or file name for file based
-backends).
-
-Please note, that you can not pass any parameters to your program here. Whole
-string will be taken and treated like program name, regardless spaces, quotes
-or other special characters.
+Executes a program after receiving message. This parameter is executed through
+shell, so you might need to escape some special characters and you can include
+any number of parameters. Additionally parameters with identifiers of received
+messages are appended to the command line. The identifiers depend on used
+service backend, typically it is ID of inserted row for database backends or
+file name for file based backends.
 
 .SS Database backends options
 
