@@ -18,6 +18,7 @@ ChangeLog
 2009???? - 1.23.91
 
 [+] * PostgreSQL backend now supports IDs for RunOnReceive.
+[+] * RunOnReceive is started through shell not directly.
     
 20090311 - 1.23.90
 
